--- a/app.json
+++ b/app.json
@@ -1,10 +1,9 @@
 {
-  "name": "Esther Bot",
-  "description": "Esther, bot.",
-  "keywords": ["esther", "bot", "express"],
-  "website": "https://estherbot.com",
-  "repository": "https://github.com/esthercrawford/smooch-bot-example",
-  "logo": "http://www.estherbot.com/wp-content/uploads/2016/03/EstherBot-photo.png",
+  "name": "Chris Bot",
+  "description": "Chris, bot.",
+  "keywords": ["chris", "bot", "express"],
+  "repository": "https://github.com/skiman6010/ChrisBot",
+  "logo": "",
   "env": {
     "SMOOCH_APP_TOKEN": {
       "description": "Your Smooch app token which is used to initialize the web widget.",
